Created attachment 114686 [details] Sample XLSX showing issue with importing Data Bar Steps to reproduce: 1. Open WinterOlympics.xlsx in Excel 2. Open WinterOlympics.xlsx in Calc 3. Compare Row F5:F30 Note the color of the Data Bar is set to "Orange" in Excel but shows Green in Calc. In Calc, Format -> Manage Conditional Formatting -> F5:F30 -> Edit -> More shows the strange value of Red (negative) to White (positive). Editing these values has no effect.
Added JP and bubli as you two have recently made some great progress on data bars support. Thanks!
I can confirm with LO 4.4.1.2, win7 Luke, what's your version of LO?
confirm in Version: 4.4.3.0.0+ Build ID: 3eba5eb1774ab621a1f0f4dcc7e82cce6c025b0a TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:libreoffice-4-4, Time: 2015-03-27_09:07:12 Version: 4.3.0.0.alpha1+ Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e
The xlsx document was created in Excel 2013 and when i opened it in Excel 2010, it lists 5 data bar conditional formatting at F5:F30 and 1 data bar at F5:F29. [1] F5:F30 - Orange Gradient Fill, No Border [2] F5:F30 - Brown Gradient Fill, No Border [4] F5:F30 - Orange Gradient Fill, No Border [5] F5:F30 - Light Orange Gradient Fill, No Border [5] F5:F30 - Blue Gradient Fill, With Border [1] F5:F229 - Green Gradient Fill, With Border Opening it in master only shows 1 data bar entry at F5:F30 with 5 conditions and 1 data bar at F5:F29. [1] F5:F30 - White Gradient Fill [2] F5:F30 - White Gradient Fill [4] F5:F30 - White Gradient Fill [5] F5:F30 - White Gradient Fill [5] F5:F30 - Blue Gradient Fill [1] F5:F229 - Blue Gradient Fill Data bars only started appearing in 4.0.
Also for me reproducible with LO 4.4.1.2, Win 8.1. Besides that issue, there also several further problems for which also a bug report could be opened.
A (Andy), I think I've reported them all, Data Missing Err:509 is Bug 66377 - Feature request: Format As Table Pie Chart label is Bug 90510 - Calc does not apply pie label settings Added them to the See Also:
Conditional formatting bugs are normally for me. This one is a problem around theme color handling that I need to inspect.
Markus Mohrhard committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=f3121049828596b369e3ea844355d61666e49795 use index as real index and not token, tdf#90511 It will be available in 5.0.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Look forward to verify this. Is it possible to backport this to 4.4?
Markus Mohrhard committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=2a88873e96d5aa916146a74c20b34b2715418350 add test for tdf#90511 It will be available in 5.0.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
This bug fix is mentioned in the release notes of the coming LibreOffice 5.0 (see release notes https://wiki.documentfoundation.org/ReleaseNotes/5.0). Therefore it would be wonderful if this feature really worked well, otherwise it should not be mentioned in the release notes. In the notes it reads: Import of Data bars and Color Scales color values handles theme colors. tdf#90511 (Markus Mohrhard)
Verified today in LO Version: 5.0.0.0.beta1 Build ID: 0a16c3dda4150008d9be6f24cbd15ac198d116d3 Locale: en-US (en_US) Its still reproducible. Results are: Note the color of the Data Bar is set to "Orange" in Excel but shows Green in Calc. Please find attached screenshot.
Created attachment 115818 [details] 90511_RetestFailed_Import In LO
(In reply to darshan.gandhi from comment #12) > Verified today in LO Version: 5.0.0.0.beta1 > Build ID: 0a16c3dda4150008d9be6f24cbd15ac198d116d3 > Locale: en-US (en_US) > > Its still reproducible. > Results are: Note the color of the Data Bar is set to "Orange" in Excel but > shows Green in Calc. > > Please find attached screenshot. That is a totally different problem and has nothing to do with the imported color. The imported color has been fixed as part of this bug. The difference that you see now in Calc vs Excel is a difference in selecting the conditional formatting when you have two overlapping conditional formats. There is no way to get this correct in all cases as Libreoffice and Excel use a different concept for how they represent conditional formats.
Please don't reopen a bug that a developer marked as fix together with a commit unless you understand what you are doing.