sc/source/filter/inc/themebuffer.hxx
@@ -37,6 +37,8 @@ public:
     /** Returns the theme color with the specified token identifier. */
     sal_Int32           getColorByToken( sal_Int32 nToken ) const;
 
+    sal_Int32           getColorByIndex(size_t nIndex) const;
+
     /** Returns the default font data for the current file type. */
     inline const FontModel& getDefaultFontModel() const { return *mxDefFontModel; }
 
